# g4application

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  g4.cc  index.html  params.json
cmake/: FindG4Application.cmake  README.md
example/: CMakeLists.txt  example.mac
example/include/: ExampleEventAction.hh  ExampleGeometryBuilder.hh  ExampleParticleGeneratorBuilder.hh  ExamplePhysicsBuilder.hh  ExamplePlugin.hh
example/src/: ExamplePlugin.cc
examples/: example-http.mac  example-vis.mac  example.mac  test_configuration.mac  void.mac
examples/httpPlugin/: CMakeLists.txt  README.md  README.txt  example-http.mac
examples/httpPlugin/include/: HttpEventAction.hh  HttpPlugin.hh  HttpServer.hh  ServerState.hh
examples/httpPlugin/src/: HttpPlugin.cc  HttpServer.cc  ServerState.cc
examples/parallelTest/: CMakeLists.txt  README.md
examples/parallelTest/include/: ParallelPlugin.hh
examples/parallelTest/macro/: run.mac  run_and_vis.mac
examples/parallelTest/src/: ParallelPlugin.cc
examples/rotationTest/: CMakeLists.txt  README.md
examples/rotationTest/include/: Geometry.hh  RotationPlugin.hh
examples/rotationTest/macro/: active.mac  passive.mac
examples/rotationTest/src/: Geometry.cc  RotationPlugin.cc
examples/simplePlugin/: CMakeLists.txt  example-vis.mac  example.mac
examples/simplePlugin/include/: ExampleGeometryBuilder.hh  ExampleParticleGenerator.hh  ExamplePhysicsList.hh  ExamplePlugin.hh
examples/simplePlugin/src/: ExampleGeometryBuilder.cc  ExampleParticleGenerator.cc  ExampleParticleGeneratorBuilder.cc  ExamplePhysicsBuilder.cc  ExamplePhysicsList.cc  ExamplePlugin.cc
include/: Application.hh  ApplicationActionInitialization.hh  ApplicationConfiguration.hh  ApplicationMessenger.hh  Component.hh  ComponentActionInitialization.hh  ComponentManager.hh  ComponentMessenger.hh  ComponentRegistry.hh  CompositeAction.hh  CompositeDetectorConstruction.hh  CompositeEventAction.hh  CompositeGeometry.hh  CompositeRunAction.hh  CompositeStackingAction.hh  CompositeSteppingAction.hh  CompositeTrackingAction.hh  Configuration.hh  ConfigurationMessenger.hh  G4Application.hh  GenericParallelWorld.hh  GeometryBuilder.hh  NumberingEventAction.hh  ParticleGeneratorBuilder.hh  PhysicsBuilder.hh  PluggableGeometry.hh  Plugin.hh  PluginLoader.hh  PluginMessenger.hh  RunInitializer.hh  RunListener.hh  RunManager.hh  RunObserver.hh  SingleComponentPlugin.hh  macros.hh  version.hh
include/actions/: MemoryRunAction.hh  NumberingEventAction.hh
include/components/: ComponentRegistry.hh  DefaultWorld.hh  EventNumberLogging.hh  GPS.hh  MemoryLogging.hh  ReferencePhysicsList.hh
include/io/: Hdf5Writer.hh
include/ui/: UIcmdWithNIntegers.hh
include/util/: Observer.hh  Singleton.hh  ThreadLocal.hh  ThreadStorage.hh  ThrowingExceptionHandler.hh  Verbosity.hh  json.hh  vectorOperations.hh
lib/: README.md
src/: Application.cc  ApplicationActionInitialization.cc  ApplicationConfiguration.cc  ApplicationMessenger.cc  ComponentActionInitialization.cc  ComponentManager.cc  ComponentMessenger.cc  ComponentRegistry.cc  CompositeDetectorConstruction.cc  CompositeGeometry.cc  Configuration.cc  ConfigurationMessenger.cc  G4Application.cc  GeometryBuilder.cc  NumberingEventAction.cc  PluggableGeometry.cc  PluginLoader.cc  PluginMessenger.cc  RunManager.cc  SingleComponentPlugin.cc
src/actions/: MemoryRunAction.cc  NumberingEventAction.cc
src/components/: ComponentRegistry.cc  DefaultWorld.cc  EventNumberLogging.cc  GPS.cc  MemoryLogging.cc  ReferencePhysicsList.cc
src/io/: Hdf5Writer.cc
src/ui/: UIcmdWithNIntegers.cc
src/util/: ThrowingExceptionHandler.cc  json.cc
test/: run.cc
